<resources>
    <string name="app_name">ItMeans</string>
    <string name="search_go">Search</string>
    <string name="definition_verb_title">Verb</string>
    <string name="definition_noun_title">Noun</string>
    <string name="association_title">Similar words</string>
    <string name="not_found">No results</string>
    <string name="entry_title">Word</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_recents">Recents</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_delete_all">Delete All</string>
    <string name="favorites_activity_title">Favorites</string>
    <string name="warning_title">Warning</string>
    <string name="delete_all_favorites_words_message">Do you really want clear all favorites words?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
