<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="wordModel"
            type="com.example.sasham.itmeans.search.WordDetailsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/result_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entry_title" />

            <TextView
                android:id="@+id/entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{wordModel.definition.get().entry}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/definition_verb_title" />

            <TextView
                android:id="@+id/definition_verb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{wordModel.meaning.get().verb}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/definition_noun_title" />

            <TextView
                android:id="@+id/definition_noun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{wordModel.meaning.get().noun}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/association_title" />

            <TextView
                android:id="@+id/association_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{wordModel.association.get().assocWord.toString()}" />
        </LinearLayout>

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/not_found" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</layout>
